magic_enumを使ってみた

--- a/game-min-rpg.vcxproj
+++ b/game-min-rpg.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="game_engine.h" />
     <ClInclude Include="game_utils.h" />
     <ClInclude Include="luas.h" />
+    <ClInclude Include="magic_enum.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="sol.hpp" />
