--- a/game-min-rpg.vcxproj.filters
+++ b/game-min-rpg.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClInclude Include="luas.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="magic_enum.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="resorce.lua">
