--- a/min-rpg.vcxproj
+++ b/min-rpg.vcxproj
@@ -167,7 +167,8 @@
     <ClCompile Include="game_engine.cpp" />
     <ClCompile Include="game_utils.cpp" />
     <ClCompile Include="lua_manager.cpp" />
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="main_scene.cpp" />
+    <ClCompile Include="start.cpp" />
     <ClCompile Include="ingame_manager.cpp" />
     <ClCompile Include="sprite.cpp" />
   </ItemGroup>
@@ -176,7 +177,8 @@
     <ClInclude Include="game_utils.h" />
     <ClInclude Include="lua_manager.h" />
     <ClInclude Include="magic_enum.h" />
-    <ClInclude Include="main.h" />
+    <ClInclude Include="main_scene.h" />
+    <ClInclude Include="start.h" />
     <ClInclude Include="ingame_manager.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="sol.hpp" />
