--- a/min-rpg.vcxproj
+++ b/min-rpg.vcxproj
@@ -168,6 +168,8 @@
     <ClCompile Include="game_utils.cpp" />
     <ClCompile Include="lua_manager.cpp" />
     <ClCompile Include="main_scene.cpp" />
+    <ClCompile Include="ingame_base.cpp" />
+    <ClCompile Include="main_scene_ui.cpp" />
     <ClCompile Include="start.cpp" />
     <ClCompile Include="ingame_manager.cpp" />
     <ClCompile Include="sprite.cpp" />
@@ -175,9 +177,12 @@
   <ItemGroup>
     <ClInclude Include="game_engine.h" />
     <ClInclude Include="game_utils.h" />
+    <ClInclude Include="game_utils_template.h" />
     <ClInclude Include="lua_manager.h" />
     <ClInclude Include="magic_enum.h" />
     <ClInclude Include="main_scene.h" />
+    <ClInclude Include="ingame_base.h" />
+    <ClInclude Include="main_scene_ui.h" />
     <ClInclude Include="start.h" />
     <ClInclude Include="ingame_manager.h" />
     <ClInclude Include="resource.h" />
