選択肢を実装できた

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
         "Cerr",
         "Images",
         "Time",
-        "MessageWindow"
+        "MessageWindow",
+        "SelectionWindow"
     ],
     "lua.targetVersion": "5.3",
 }
