--- a/min-rpg.vcxproj
+++ b/min-rpg.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="lua_manager.cpp" />
     <ClCompile Include="main_scene.cpp" />
     <ClCompile Include="ingame_base.cpp" />
+    <ClCompile Include="main_scene_controller.cpp" />
     <ClCompile Include="main_scene_effect.cpp" />
     <ClCompile Include="main_scene_player.cpp" />
     <ClCompile Include="main_scene_ui.cpp" />
@@ -190,6 +191,7 @@
     <ClInclude Include="magic_enum.h" />
     <ClInclude Include="main_scene.h" />
     <ClInclude Include="ingame_base.h" />
+    <ClInclude Include="main_scene_controller.h" />
     <ClInclude Include="main_scene_effect.h" />
     <ClInclude Include="main_scene_player.h" />
     <ClInclude Include="main_scene_ui.h" />
