--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
         "Time",
         "MessageWindow",
         "SelectionWindow",
-        "FlagManager"
+        "FlagManager",
+        "Sound"
     ],
     "lua.targetVersion": "5.3",
 }
