--- a/min-rpg.vcxproj
+++ b/min-rpg.vcxproj
@@ -182,6 +182,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="title_scene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game_engine.h" />
@@ -201,6 +202,7 @@
     <ClInclude Include="sol.hpp" />
     <ClInclude Include="sprite.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="title_scene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
