アイコンをつけたりした

--- a/min-rpg.vcxproj
+++ b/min-rpg.vcxproj
@@ -205,6 +205,12 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="title_scene.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Resource.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="asset\image\min_rpg.ico" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
